--- a/src/debian/dsf-po/sv.po
+++ b/src/debian/dsf-po/sv.po
@@ -7,8 +7,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGENAME@_4.6.99+svn6580-1_sv\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-12-25 20:40+0100\n"
+"Report-Msgid-Bugs-To: gforge@packages.debian.org\n"
+"POT-Creation-Date: 2009-06-12 23:23+0200\n"
 "PO-Revision-Date: 2008-07-29 18:44+0200\n"
 "Last-Translator: Martin Ågren <martin.agren@gmail.com>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
@@ -22,37 +22,40 @@ msgstr ""
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:3001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:3001
 #: ../dsf-helper/shellhost-variables.templates:2001
 msgid "Shell server:"
 msgstr "Skalserver:"
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:3001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:3001
 msgid ""
 "Please enter the hostname of the server that will host the @FORGENAME@ shell "
 "accounts."
 msgstr ""
-"Ange värdnamnet för servern som kommer tillhandahålla skalkonton för @FORGENAME@."
+"Ange värdnamnet för servern som kommer tillhandahålla skalkonton för "
+"@FORGENAME@."
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:6001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:6001
 #: ../dsf-helper/downloadhost-variables.templates:2001
 msgid "Download server:"
 msgstr "Hämtningsserver:"
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:6001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:6001
 msgid ""
-"Please enter the hostname of the server that will host the @FORGENAME@ packages."
-msgstr "Ange värdnamnet för servern som kommer tillhandahålla @FORGENAME@-paketen."
+"Please enter the hostname of the server that will host the @FORGENAME@ "
+"packages."
+msgstr ""
+"Ange värdnamnet för servern som kommer tillhandahålla @FORGENAME@-paketen."
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:6001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:6001
 #: ../dsf-helper/downloadhost-variables.templates:2001
 #: ../dsf-helper/lists-variables.templates:2001
 #: ../dsf-helper/users-variables.templates:2001
@@ -61,7 +64,7 @@ msgstr "Det ska inte vara samma som huvudvärden för @FORGENAME@."
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:8001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:8001
 msgid "@FORGENAME@ administrator login:"
 msgstr "@FORGENAME@-administratörens användarnamn:"
 
@@ -69,92 +72,93 @@ msgstr "@FORGENAME@-administratörens användarnamn:"
 #. Description
 #. Type: password
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:8001
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:10001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:8001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:10001
 msgid ""
-"The @FORGENAME@ administrator account will have full privileges on the system. It "
-"will be used to approve the creation of new projects."
+"The @FORGENAME@ administrator account will have full privileges on the "
+"system. It will be used to approve the creation of new projects."
 msgstr ""
-"Administratörskontot för @FORGENAME@ kommer att ha alla rättigheter i @FORGENAME@-"
-"systemet. Det behövs för att godkänna skapandet av projekten."
+"Administratörskontot för @FORGENAME@ kommer att ha alla rättigheter i "
+"@FORGENAME@-systemet. Det behövs för att godkänna skapandet av projekten."
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:8001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:8001
 msgid "Please choose the username for this account."
 msgstr "Ange användarnamnet för detta konto."
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:9001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:9001
 #: ../dsf-helper/host-variables.templates:2001
 msgid "IP address:"
 msgstr "IP-adress:"
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:9001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:9001
 #: ../dsf-helper/host-variables.templates:2001
 msgid ""
 "Please enter the IP address of the server that will host the @FORGENAME@ "
 "installation."
 msgstr ""
-"Ange IP-adressen för servern som kommer tillhandahålla @FORGENAME@-installationen."
+"Ange IP-adressen för servern som kommer tillhandahålla @FORGENAME@-"
+"installationen."
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:9001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:9001
 #: ../dsf-helper/host-variables.templates:2001
 msgid "This is needed for the configuration of Apache virtual hosting."
 msgstr "Detta krävs för att konfigurera Apaches virtuella värd."
 
 #. Type: password
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:10001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:10001
 msgid "@FORGENAME@ administrator password:"
 msgstr "@FORGENAME@-administratörens lösenord:"
 
 #. Type: password
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:10001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:10001
 msgid "Please choose the password for this account."
 msgstr "Mata in lösenordet för detta konto."
 
 #. Type: password
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:11001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:11001
 #: ../dsf-helper/dbpasswd-variables.templates:3001
 msgid "Password confirmation:"
 msgstr "Lösenordsbekräftelse:"
 
 #. Type: password
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:11001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:11001
 #: ../dsf-helper/dbpasswd-variables.templates:3001
 msgid "Please re-type the password for confirmation."
 msgstr "Mata in lösenordet igen för bekräftelse."
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:12001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:12001
 msgid "Initial list of skills:"
 msgstr "Initiala listan över färdigheter:"
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:12001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:12001
 msgid ""
 "@FORGENAME@ allows users to define a list of their skills, to be chosen from "
 "those present in the database. This list is the initial list of skills that "
 "will enter the database."
 msgstr ""
-"@FORGENAME@ låter användarna definiera en lista över sina färdigheter, som kan "
-"väljas av de som finns i databasen.  Denna lista är den initiala listan som "
-"kommer att läggas in i databasen."
+"@FORGENAME@ låter användarna definiera en lista över sina färdigheter, som "
+"kan väljas av de som finns i databasen.  Denna lista är den initiala listan "
+"som kommer att läggas in i databasen."
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:12001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:12001
 msgid "Please enter a semicolon-separated list of skill names."
 msgstr "Mata in namn på färdigheter, separerade med semikolon."
 
@@ -162,7 +166,7 @@ msgstr "Mata in namn på färdigheter, separerade med semikolon."
 #. Description
 #. Translators: SCM here means "Source Control Management"
 #. (cvs, svn, etc.)
-#: ../@PACKAGENAME@-dns-bind9.templates.dsfh-in:3001
+#: ../dsf-in/dns-bind9.templates.dsfh-in:3001
 msgid "Do you want a simple DNS setup for @FORGENAME@?"
 msgstr "Vill du ha en enkel DNS-konfiguration för @FORGENAME@?"
 
@@ -170,7 +174,7 @@ msgstr "Vill du ha en enkel DNS-konfiguration för @FORGENAME@?"
 #. Description
 #. Translators: SCM here means "Source Control Management"
 #. (cvs, svn, etc.)
-#: ../@PACKAGENAME@-dns-bind9.templates.dsfh-in:3001
+#: ../dsf-in/dns-bind9.templates.dsfh-in:3001
 msgid ""
 "You can use a simple DNS setup with wildcards to map all project web-hosts "
 "to a single IP address, and direct all the scm-hosts to a single SCM server, "
@@ -187,7 +191,7 @@ msgstr ""
 #. Description
 #. Translators: SCM here means "Source Control Management"
 #. (cvs, svn, etc.)
-#: ../@PACKAGENAME@-dns-bind9.templates.dsfh-in:3001
+#: ../dsf-in/dns-bind9.templates.dsfh-in:3001
 msgid ""
 "Even if you use a simple DNS setup, you can still use separate machines as "
 "project servers; it just assumes that all the project web directories are on "
@@ -199,23 +203,23 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../@PACKAGENAME@-mta-postfix.templates.dsfh-in:3001
+#: ../dsf-in/mta-postfix.templates.dsfh-in:3001
 msgid "Do you want mail to ${noreply} to be discarded?"
 msgstr "Vill du att e-post till ${noreply} ska tas bort?"
 
 #. Type: boolean
 #. Description
-#: ../@PACKAGENAME@-mta-postfix.templates.dsfh-in:3001
+#: ../dsf-in/mta-postfix.templates.dsfh-in:3001
 msgid ""
-"@FORGENAME@ sends and receives plenty of e-mail to and from the \"${noreply}\" "
-"address."
+"@FORGENAME@ sends and receives plenty of e-mail to and from the \"${noreply}"
+"\" address."
 msgstr ""
 "@FORGENAME@ skickar och tar emot en mängd e-postmeddelanden till och från "
 "adressen \"${noreply}\"."
 
 #. Type: boolean
 #. Description
-#: ../@PACKAGENAME@-mta-postfix.templates.dsfh-in:3001
+#: ../dsf-in/mta-postfix.templates.dsfh-in:3001
 msgid ""
 "E-mail to that address should be directed to a black hole (/dev/null), "
 "unless you have another use for that address."
@@ -236,9 +240,9 @@ msgid ""
 "Please enter the domain that will host the @FORGENAME@ installation. Some "
 "services (scm, lists, etc.) will be given their own subdomain in that domain."
 msgstr ""
-"Ange den domän som kommer att vara värd för @FORGENAME@-installationen.  Vissa "
-"tjänster (källkodshantering, listor, etc.) kommer att tilldelas sina egna "
-"underdomäner i den domänen."
+"Ange den domän som kommer att vara värd för @FORGENAME@-installationen.  "
+"Vissa tjänster (källkodshantering, listor, etc.) kommer att tilldelas sina "
+"egna underdomäner i den domänen."
 
 #. Type: string
 #. Description
@@ -250,8 +254,8 @@ msgstr "@FORGENAME@-administratörens e-postadress:"
 #. Description
 #: ../dsf-helper/common-variables.templates:3001
 msgid ""
-"Please enter the e-mail address of the @FORGENAME@ administrator of this site. It "
-"will be used when problems occur."
+"Please enter the e-mail address of the @FORGENAME@ administrator of this "
+"site. It will be used when problems occur."
 msgstr ""
 "Ange e-postadressen för @FORGENAME@-administratören på systemet. Den kommer "
 "användas ifall problem uppstår."
@@ -259,15 +263,17 @@ msgstr ""
 #. Type: string
 #. Description
 #: ../dsf-helper/common-variables.templates:4001
-msgid "@FORGENAME@/FusionForge system name:"
+#, fuzzy
+#| msgid "@FORGENAME@/FusionForge system name:"
+msgid "@FORGENAME@ system name:"
 msgstr "@FORGENAME@ systemnamn:"
 
 #. Type: string
 #. Description
 #: ../dsf-helper/common-variables.templates:4001
 msgid ""
-"Please enter the name of the @FORGENAME@ system. It is used in various places "
-"throughout the system."
+"Please enter the name of the @FORGENAME@ system. It is used in various "
+"places throughout the system."
 msgstr ""
 "Ange namnet på @FORGENAME@-systemet. Det används på olika ställen i systemet."
 
@@ -284,8 +290,8 @@ msgid ""
 "Please enter the IP address (or hostname) of the server that will host the "
 "@FORGENAME@ database."
 msgstr ""
-"IP-adressen (eller värdnamnet) för servern som kommer tillhandahålla @FORGENAME@-"
-"databasen."
+"IP-adressen (eller värdnamnet) för servern som kommer tillhandahålla "
+"@FORGENAME@-databasen."
 
 #. Type: string
 #. Description
@@ -297,8 +303,10 @@ msgstr "Databasnamn:"
 #. Description
 #: ../dsf-helper/dbhost-variables.templates:3001
 msgid ""
-"Please enter the name of the database that will host the @FORGENAME@ database."
-msgstr "Ange namnet på databasen som kommer tillhandahålla @FORGENAME@-databasen."
+"Please enter the name of the database that will host the @FORGENAME@ "
+"database."
+msgstr ""
+"Ange namnet på databasen som kommer tillhandahålla @FORGENAME@-databasen."
 
 #. Type: string
 #. Description
@@ -338,8 +346,10 @@ msgstr "Välj uppkopplingslösenordet."
 #. Description
 #: ../dsf-helper/downloadhost-variables.templates:2001
 msgid ""
-"Please enter the host name of the server that will host the @FORGENAME@ packages."
-msgstr "Ange värdnamnet för servern som kommer tillhandahålla @FORGENAME@-paketen."
+"Please enter the host name of the server that will host the @FORGENAME@ "
+"packages."
+msgstr ""
+"Ange värdnamnet för servern som kommer tillhandahålla @FORGENAME@-paketen."
 
 #. Type: string
 #. Description
@@ -351,13 +361,14 @@ msgstr "Grupp-id för nyhetsadministratörerna:"
 #. Description
 #: ../dsf-helper/groupid-variables.templates:2001
 msgid ""
-"The members of the news admin group can approve news for the @FORGENAME@ main "
-"page. This group's ID must not be 1. This should be changed only if you "
+"The members of the news admin group can approve news for the @FORGENAME@ "
+"main page. This group's ID must not be 1. This should be changed only if you "
 "upgrade from a previous version and want to keep the data."
 msgstr ""
-"Medlemmar i nyhetsadministrationsgruppen kan godkänna nyheter för @FORGENAME@s "
-"förstasida.  Detta grupp-id får inte vara 1. Du behöver bara ändra detta "
-"värde om du uppgraderar från en tidigare version och vill behålla ditt data."
+"Medlemmar i nyhetsadministrationsgruppen kan godkänna nyheter för "
+"@FORGENAME@s förstasida.  Detta grupp-id får inte vara 1. Du behöver bara "
+"ändra detta värde om du uppgraderar från en tidigare version och vill "
+"behålla ditt data."
 
 #. Type: string
 #. Description
@@ -381,8 +392,8 @@ msgstr "Server för sändlistor:"
 #. Description
 #: ../dsf-helper/lists-variables.templates:2001
 msgid ""
-"Please enter the host name of the server that will host the @FORGENAME@ mailing "
-"lists."
+"Please enter the host name of the server that will host the @FORGENAME@ "
+"mailing lists."
 msgstr ""
 "Ange värdnamnet för servern som kommer tillhandahålla sändlistorna för "
 "@FORGENAME@."
@@ -391,10 +402,11 @@ msgstr ""
 #. Description
 #: ../dsf-helper/shellhost-variables.templates:2001
 msgid ""
-"Please enter the host name of the server that will host the @FORGENAME@ shell "
-"accounts."
+"Please enter the host name of the server that will host the @FORGENAME@ "
+"shell accounts."
 msgstr ""
-"Ange värdnamnet för servern som kommer tillhandahålla skalkonton för @FORGENAME@."
+"Ange värdnamnet för servern som kommer tillhandahålla skalkonton för "
+"@FORGENAME@."
 
 #. Type: string
 #. Description
@@ -406,8 +418,8 @@ msgstr "Omdirigerarserver för användarnas e-post:"
 #. Description
 #: ../dsf-helper/users-variables.templates:2001
 msgid ""
-"Please enter the host name of the server that will host the @FORGENAME@ user mail "
-"redirector."
+"Please enter the host name of the server that will host the @FORGENAME@ user "
+"mail redirector."
 msgstr ""
 "Ange värdnamnet för servern som kommer tillhandahålla omdirigerarserver för "
 "användarnas e-post för @FORGENAME@."
