--- a/src/debian/dsf-po/de.po
+++ b/src/debian/dsf-po/de.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGENAME@ 4.8.2-1\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-12-25 20:40+0100\n"
+"Report-Msgid-Bugs-To: gforge@packages.debian.org\n"
+"POT-Creation-Date: 2009-06-12 23:23+0200\n"
 "PO-Revision-Date: 2009-12-27 09:30+0100\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
@@ -16,14 +16,14 @@ msgstr ""
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:3001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:3001
 #: ../dsf-helper/shellhost-variables.templates:2001
 msgid "Shell server:"
 msgstr "Shell-Server:"
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:3001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:3001
 msgid ""
 "Please enter the hostname of the server that will host the @FORGENAME@ shell "
 "accounts."
@@ -33,33 +33,35 @@ msgstr ""
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:6001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:6001
 #: ../dsf-helper/downloadhost-variables.templates:2001
 msgid "Download server:"
 msgstr "Download-Server:"
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:6001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:6001
 msgid ""
-"Please enter the hostname of the server that will host the @FORGENAME@ packages."
+"Please enter the hostname of the server that will host the @FORGENAME@ "
+"packages."
 msgstr ""
-"Bitte geben Sie den Rechnernamen des Servers ein, der Ihre @FORGENAME@-Pakete "
-"beherbergen wird."
+"Bitte geben Sie den Rechnernamen des Servers ein, der Ihre @FORGENAME@-"
+"Pakete beherbergen wird."
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:6001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:6001
 #: ../dsf-helper/downloadhost-variables.templates:2001
 #: ../dsf-helper/lists-variables.templates:2001
 #: ../dsf-helper/users-variables.templates:2001
 msgid "It should not be the same as the main @FORGENAME@ host."
 msgstr ""
-"Dieser sollte nicht mit dem Namen des Haupt-@FORGENAME@-Rechners übereinstimmen."
+"Dieser sollte nicht mit dem Namen des Haupt-@FORGENAME@-Rechners "
+"übereinstimmen."
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:8001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:8001
 msgid "@FORGENAME@ administrator login:"
 msgstr "@FORGENAME@-Administrator-Anmeldung:"
 
@@ -67,94 +69,95 @@ msgstr "@FORGENAME@-Administrator-Anmeldung:"
 #. Description
 #. Type: password
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:8001
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:10001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:8001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:10001
 msgid ""
-"The @FORGENAME@ administrator account will have full privileges on the system. It "
-"will be used to approve the creation of new projects."
+"The @FORGENAME@ administrator account will have full privileges on the "
+"system. It will be used to approve the creation of new projects."
 msgstr ""
-"Das @FORGENAME@-Administrator-Konto wird alle Privilegien auf dem @FORGENAME@-System "
-"haben. Es wird benötigt, um die Erstellung von neuen Projekten zu bewilligen."
+"Das @FORGENAME@-Administrator-Konto wird alle Privilegien auf dem "
+"@FORGENAME@-System haben. Es wird benötigt, um die Erstellung von neuen "
+"Projekten zu bewilligen."
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:8001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:8001
 msgid "Please choose the username for this account."
 msgstr "Bitte wählen Sie den Benutzernamen für dieses Konto."
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:9001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:9001
 #: ../dsf-helper/host-variables.templates:2001
 msgid "IP address:"
 msgstr "IP-Adresse:"
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:9001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:9001
 #: ../dsf-helper/host-variables.templates:2001
 msgid ""
 "Please enter the IP address of the server that will host the @FORGENAME@ "
 "installation."
 msgstr ""
-"Bitte geben Sie die IP-Adresse des Servers ein, der Ihre @FORGENAME@-Installation "
-"beherbergen wird."
+"Bitte geben Sie die IP-Adresse des Servers ein, der Ihre @FORGENAME@-"
+"Installation beherbergen wird."
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:9001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:9001
 #: ../dsf-helper/host-variables.templates:2001
 msgid "This is needed for the configuration of Apache virtual hosting."
 msgstr "Diese wird für die virtualhosting-Konfiguration des Apache benötigt."
 
 #. Type: password
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:10001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:10001
 msgid "@FORGENAME@ administrator password:"
 msgstr "@FORGENAME@-Administrator-Passwort:"
 
 #. Type: password
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:10001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:10001
 msgid "Please choose the password for this account."
 msgstr "Bitte wählen Sie das Passwort für dieses Konto."
 
 #. Type: password
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:11001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:11001
 #: ../dsf-helper/dbpasswd-variables.templates:3001
 msgid "Password confirmation:"
 msgstr "Bestätigung des Passworts:"
 
 #. Type: password
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:11001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:11001
 #: ../dsf-helper/dbpasswd-variables.templates:3001
 msgid "Please re-type the password for confirmation."
 msgstr "Bitte geben Sie zur Bestätigung das Passwort erneut ein."
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:12001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:12001
 msgid "Initial list of skills:"
 msgstr "Anfängliche Liste der Fähigkeiten:"
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:12001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:12001
 msgid ""
 "@FORGENAME@ allows users to define a list of their skills, to be chosen from "
 "those present in the database. This list is the initial list of skills that "
 "will enter the database."
 msgstr ""
-"@FORGENAME@ erlaubt es den Benutzern, eine Liste Ihrer Fähigkeiten zu definieren, "
-"die aus allen in der Datenbank hinterlegten Fähigkeiten ausgewählt werden "
-"können. Diese Liste ist die anfängliche Liste von Fähigkeiten, die in die "
-"Datenbank eingegeben wird."
+"@FORGENAME@ erlaubt es den Benutzern, eine Liste Ihrer Fähigkeiten zu "
+"definieren, die aus allen in der Datenbank hinterlegten Fähigkeiten "
+"ausgewählt werden können. Diese Liste ist die anfängliche Liste von "
+"Fähigkeiten, die in die Datenbank eingegeben wird."
 
 #. Type: string
 #. Description
-#: ../@PACKAGENAME@-db-postgresql.templates.dsfh-in:12001
+#: ../dsf-in/db-postgresql.templates.dsfh-in:12001
 msgid "Please enter a semicolon-separated list of skill names."
 msgstr ""
 "Bitte geben Sie die Namen der Fähigkeiten, getrennt durch Semikola »;«, ein."
@@ -163,7 +166,7 @@ msgstr ""
 #. Description
 #. Translators: SCM here means "Source Control Management"
 #. (cvs, svn, etc.)
-#: ../@PACKAGENAME@-dns-bind9.templates.dsfh-in:3001
+#: ../dsf-in/dns-bind9.templates.dsfh-in:3001
 msgid "Do you want a simple DNS setup for @FORGENAME@?"
 msgstr "Möchten Sie eine einfache DNS-Installation für @FORGENAME@?"
 
@@ -171,7 +174,7 @@ msgstr "Möchten Sie eine einfache DNS-Installation für @FORGENAME@?"
 #. Description
 #. Translators: SCM here means "Source Control Management"
 #. (cvs, svn, etc.)
-#: ../@PACKAGENAME@-dns-bind9.templates.dsfh-in:3001
+#: ../dsf-in/dns-bind9.templates.dsfh-in:3001
 msgid ""
 "You can use a simple DNS setup with wildcards to map all project web-hosts "
 "to a single IP address, and direct all the scm-hosts to a single SCM server, "
@@ -187,7 +190,7 @@ msgstr ""
 #. Description
 #. Translators: SCM here means "Source Control Management"
 #. (cvs, svn, etc.)
-#: ../@PACKAGENAME@-dns-bind9.templates.dsfh-in:3001
+#: ../dsf-in/dns-bind9.templates.dsfh-in:3001
 msgid ""
 "Even if you use a simple DNS setup, you can still use separate machines as "
 "project servers; it just assumes that all the project web directories are on "
@@ -200,22 +203,23 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../@PACKAGENAME@-mta-postfix.templates.dsfh-in:3001
+#: ../dsf-in/mta-postfix.templates.dsfh-in:3001
 msgid "Do you want mail to ${noreply} to be discarded?"
 msgstr "Möchten Sie, dass E-Mail an ${noreply} verworfen wird?"
 
 #. Type: boolean
 #. Description
-#: ../@PACKAGENAME@-mta-postfix.templates.dsfh-in:3001
+#: ../dsf-in/mta-postfix.templates.dsfh-in:3001
 msgid ""
-"@FORGENAME@ sends and receives plenty of e-mail to and from the \"${noreply}\" "
-"address."
+"@FORGENAME@ sends and receives plenty of e-mail to and from the \"${noreply}"
+"\" address."
 msgstr ""
-"@FORGENAME@ sendet und empfängt viele E-Mails von und auf der »${noreply}«-Adresse."
+"@FORGENAME@ sendet und empfängt viele E-Mails von und auf der »${noreply}«-"
+"Adresse."
 
 #. Type: boolean
 #. Description
-#: ../@PACKAGENAME@-mta-postfix.templates.dsfh-in:3001
+#: ../dsf-in/mta-postfix.templates.dsfh-in:3001
 msgid ""
 "E-mail to that address should be directed to a black hole (/dev/null), "
 "unless you have another use for that address."
@@ -251,27 +255,29 @@ msgstr "E-Mail-Adresse des @FORGENAME@-Administrators:"
 #. Description
 #: ../dsf-helper/common-variables.templates:3001
 msgid ""
-"Please enter the e-mail address of the @FORGENAME@ administrator of this site. It "
-"will be used when problems occur."
+"Please enter the e-mail address of the @FORGENAME@ administrator of this "
+"site. It will be used when problems occur."
 msgstr ""
-"Bitte geben Sie die E-Mail-Adresse des @FORGENAME@-Administrators Ihrer Site an. "
-"Diese wird beim Auftritt von Problemen benötigt."
+"Bitte geben Sie die E-Mail-Adresse des @FORGENAME@-Administrators Ihrer Site "
+"an. Diese wird beim Auftritt von Problemen benötigt."
 
 #. Type: string
 #. Description
 #: ../dsf-helper/common-variables.templates:4001
-msgid "@FORGENAME@/FusionForge system name:"
+#, fuzzy
+#| msgid "@FORGENAME@/FusionForge system name:"
+msgid "@FORGENAME@ system name:"
 msgstr "@FORGENAME@/FusionForge-Systemname:"
 
 #. Type: string
 #. Description
 #: ../dsf-helper/common-variables.templates:4001
 msgid ""
-"Please enter the name of the @FORGENAME@ system. It is used in various places "
-"throughout the system."
+"Please enter the name of the @FORGENAME@ system. It is used in various "
+"places throughout the system."
 msgstr ""
-"Bitte geben Sie den Namen des @FORGENAME@-Systems ein. Er wird an verschiedenen "
-"Stellen im ganzen System verwendet."
+"Bitte geben Sie den Namen des @FORGENAME@-Systems ein. Er wird an "
+"verschiedenen Stellen im ganzen System verwendet."
 
 #. Type: string
 #. Description
@@ -299,7 +305,8 @@ msgstr "Datenbankname:"
 #. Description
 #: ../dsf-helper/dbhost-variables.templates:3001
 msgid ""
-"Please enter the name of the database that will host the @FORGENAME@ database."
+"Please enter the name of the database that will host the @FORGENAME@ "
+"database."
 msgstr ""
 "Bitte geben Sie den Namen der Datenbank an, die die @FORGENAME@-Datenbank "
 "beherbergen wird."
@@ -343,10 +350,11 @@ msgstr "Bitte wählen Sie das Passwort für Verbindungen aus."
 #. Description
 #: ../dsf-helper/downloadhost-variables.templates:2001
 msgid ""
-"Please enter the host name of the server that will host the @FORGENAME@ packages."
+"Please enter the host name of the server that will host the @FORGENAME@ "
+"packages."
 msgstr ""
-"Bitte geben Sie den Rechnernamen des Servers ein, der Ihre @FORGENAME@-Pakete "
-"beherbergen wird."
+"Bitte geben Sie den Rechnernamen des Servers ein, der Ihre @FORGENAME@-"
+"Pakete beherbergen wird."
 
 #. Type: string
 #. Description
@@ -358,14 +366,14 @@ msgstr "ID der News-Administrators-Gruppe:"
 #. Description
 #: ../dsf-helper/groupid-variables.templates:2001
 msgid ""
-"The members of the news admin group can approve news for the @FORGENAME@ main "
-"page. This group's ID must not be 1. This should be changed only if you "
+"The members of the news admin group can approve news for the @FORGENAME@ "
+"main page. This group's ID must not be 1. This should be changed only if you "
 "upgrade from a previous version and want to keep the data."
 msgstr ""
-"Mitglieder der News-Administrator-Gruppe können Nachrichten für die @FORGENAME@-"
-"Hauptseite genehmigen. Diese Gruppen-ID darf nicht 1 sein. Dies sollte nur "
-"geändert werden, falls Sie ein Upgrade von einer vorhergehenden Version "
-"durchführen und Ihre Daten behalten möchten."
+"Mitglieder der News-Administrator-Gruppe können Nachrichten für die "
+"@FORGENAME@-Hauptseite genehmigen. Diese Gruppen-ID darf nicht 1 sein. Dies "
+"sollte nur geändert werden, falls Sie ein Upgrade von einer vorhergehenden "
+"Version durchführen und Ihre Daten behalten möchten."
 
 #. Type: string
 #. Description
@@ -389,8 +397,8 @@ msgstr "Mailinglisten-Server:"
 #. Description
 #: ../dsf-helper/lists-variables.templates:2001
 msgid ""
-"Please enter the host name of the server that will host the @FORGENAME@ mailing "
-"lists."
+"Please enter the host name of the server that will host the @FORGENAME@ "
+"mailing lists."
 msgstr ""
 "Bitte geben Sie den Rechnernamen des Servers ein, der Ihre @FORGENAME@-"
 "Mailinglisten beherbergen wird."
@@ -399,8 +407,8 @@ msgstr ""
 #. Description
 #: ../dsf-helper/shellhost-variables.templates:2001
 msgid ""
-"Please enter the host name of the server that will host the @FORGENAME@ shell "
-"accounts."
+"Please enter the host name of the server that will host the @FORGENAME@ "
+"shell accounts."
 msgstr ""
 "Bitte geben Sie den Rechnernamen des Servers ein, der Ihre @FORGENAME@-Shell-"
 "Konten beherbergen wird."
@@ -415,11 +423,11 @@ msgstr "Benutzer-E-Mail-Umleitungsserver:"
 #. Description
 #: ../dsf-helper/users-variables.templates:2001
 msgid ""
-"Please enter the host name of the server that will host the @FORGENAME@ user mail "
-"redirector."
+"Please enter the host name of the server that will host the @FORGENAME@ user "
+"mail redirector."
 msgstr ""
-"Bitte geben Sie den Rechnernamen des Servers ein, der Ihren @FORGENAME@-Benutzer-"
-"E-Mail-Umleiter beherbergen wird."
+"Bitte geben Sie den Rechnernamen des Servers ein, der Ihren @FORGENAME@-"
+"Benutzer-E-Mail-Umleiter beherbergen wird."
 
 #. Type: select
 #. Choices
