--- a/src/debian/dsf-po/fi.po
+++ b/src/debian/dsf-po/fi.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
-"Report-Msgid-Bugs-To: @PACKAGENAME@@packages.debian.org\n"
+"Report-Msgid-Bugs-To: gforge@packages.debian.org\n"
 "POT-Creation-Date: 2009-06-12 23:23+0200\n"
 "PO-Revision-Date: 2008-03-24 17:41+0200\n"
 "Last-Translator: Esko Arajärvi <edu@iki.fi>\n"
@@ -24,12 +24,13 @@ msgstr "Komentorivipalvelin:"
 #: ../dsf-in/db-postgresql.templates.dsfh-in:3001
 #, fuzzy
 #| msgid ""
-#| "Please enter the hostname of the server that will host the @FORGENAME@ shell "
-#| "accounts."
+#| "Please enter the hostname of the server that will host the @FORGENAME@ "
+#| "shell accounts."
 msgid ""
 "Please enter the hostname of the server that will host the @FORGENAME@ shell "
 "accounts."
-msgstr "Anna @FORGENAME@n komentorivitunnuksia isännöivän palvelimen verkkonimi."
+msgstr ""
+"Anna @FORGENAME@n komentorivitunnuksia isännöivän palvelimen verkkonimi."
 
 #. Type: string
 #. Description
@@ -77,14 +78,14 @@ msgstr "@FORGENAME@n ylläpitotunnus:"
 #: ../dsf-in/db-postgresql.templates.dsfh-in:10001
 #, fuzzy
 #| msgid ""
-#| "The @FORGENAME@ administrator account will have full privileges on the system. "
-#| "It will be used to approve the creation of new projects."
+#| "The @FORGENAME@ administrator account will have full privileges on the "
+#| "system. It will be used to approve the creation of new projects."
 msgid ""
 "The @FORGENAME@ administrator account will have full privileges on the "
 "system. It will be used to approve the creation of new projects."
 msgstr ""
-"@FORGENAME@n ylläpitotunnuksella tulee olemaan täydet oikeudet järjestelmään. "
-"Sitä käytetään hyväksyttäessä uusien projektien luominen."
+"@FORGENAME@n ylläpitotunnuksella tulee olemaan täydet oikeudet "
+"järjestelmään. Sitä käytetään hyväksyttäessä uusien projektien luominen."
 
 #. Type: string
 #. Description
@@ -158,9 +159,9 @@ msgstr "Alkuperäinen lista taidoista:"
 #: ../dsf-in/db-postgresql.templates.dsfh-in:12001
 #, fuzzy
 #| msgid ""
-#| "@FORGENAME@ allows users to define a list of their skills, to be chosen from "
-#| "those present in the database. This list is the initial list of skills "
-#| "that will enter the database."
+#| "@FORGENAME@ allows users to define a list of their skills, to be chosen "
+#| "from those present in the database. This list is the initial list of "
+#| "skills that will enter the database."
 msgid ""
 "@FORGENAME@ allows users to define a list of their skills, to be chosen from "
 "those present in the database. This list is the initial list of skills that "
@@ -230,14 +231,14 @@ msgstr ""
 #: ../dsf-in/mta-postfix.templates.dsfh-in:3001
 #, fuzzy
 #| msgid ""
-#| "@FORGENAME@ sends and receives plenty of e-mail to and from the \"${noreply}\" "
-#| "address."
+#| "@FORGENAME@ sends and receives plenty of e-mail to and from the "
+#| "\"${noreply}\" address."
 msgid ""
 "@FORGENAME@ sends and receives plenty of e-mail to and from the \"${noreply}"
 "\" address."
 msgstr ""
-"@FORGENAME@ lähettää ja vastaanottaa paljon sähköpostia osoitteen ”${noreply}” "
-"kautta."
+"@FORGENAME@ lähettää ja vastaanottaa paljon sähköpostia osoitteen "
+"”${noreply}” kautta."
 
 #. Type: boolean
 #. Description
@@ -269,8 +270,9 @@ msgid ""
 "Please enter the domain that will host the @FORGENAME@ installation. Some "
 "services (scm, lists, etc.) will be given their own subdomain in that domain."
 msgstr ""
-"Anna @FORGENAME@-asennuksen verkkotunnus. Joillekin palveluille (versionhallinta, "
-"listat, jne.) annetaan oma aliverkkotunnus tämän verkkotunnuksen alta."
+"Anna @FORGENAME@-asennuksen verkkotunnus. Joillekin palveluille "
+"(versionhallinta, listat, jne.) annetaan oma aliverkkotunnus tämän "
+"verkkotunnuksen alta."
 
 #. Type: string
 #. Description
@@ -285,8 +287,8 @@ msgstr "@FORGENAME@n ylläpidon sähköpostiosoite:"
 #: ../dsf-helper/common-variables.templates:3001
 #, fuzzy
 #| msgid ""
-#| "Please enter the e-mail address of the @FORGENAME@ administrator of this site. "
-#| "It will be used when problems occur."
+#| "Please enter the e-mail address of the @FORGENAME@ administrator of this "
+#| "site. It will be used when problems occur."
 msgid ""
 "Please enter the e-mail address of the @FORGENAME@ administrator of this "
 "site. It will be used when problems occur."
@@ -307,8 +309,8 @@ msgstr "@FORGENAME@n järjestelmänimi:"
 #: ../dsf-helper/common-variables.templates:4001
 #, fuzzy
 #| msgid ""
-#| "Please enter the name of the @FORGENAME@ system. It is used in various places "
-#| "throughout the system."
+#| "Please enter the name of the @FORGENAME@ system. It is used in various "
+#| "places throughout the system."
 msgid ""
 "Please enter the name of the @FORGENAME@ system. It is used in various "
 "places throughout the system."
@@ -333,7 +335,8 @@ msgid ""
 "Please enter the IP address (or hostname) of the server that will host the "
 "@FORGENAME@ database."
 msgstr ""
-"Anna @FORGENAME@n tietokantaa isännöivän palvelimen IP-osoite (tai verkkonimi)."
+"Anna @FORGENAME@n tietokantaa isännöivän palvelimen IP-osoite (tai "
+"verkkonimi)."
 
 #. Type: string
 #. Description
@@ -346,7 +349,8 @@ msgstr "Tietokannan nimi:"
 #: ../dsf-helper/dbhost-variables.templates:3001
 #, fuzzy
 #| msgid ""
-#| "Please enter the name of the database that will host the @FORGENAME@ database."
+#| "Please enter the name of the database that will host the @FORGENAME@ "
+#| "database."
 msgid ""
 "Please enter the name of the database that will host the @FORGENAME@ "
 "database."
@@ -413,9 +417,9 @@ msgstr "Uutisten ylläpitäjäryhmän ID:"
 #: ../dsf-helper/groupid-variables.templates:2001
 #, fuzzy
 #| msgid ""
-#| "The members of the news admin group can approve news for the @FORGENAME@ main "
-#| "page. This group's ID must not be 1. This should be changed only if you "
-#| "upgrade from a previous version and want to keep the data."
+#| "The members of the news admin group can approve news for the @FORGENAME@ "
+#| "main page. This group's ID must not be 1. This should be changed only if "
+#| "you upgrade from a previous version and want to keep the data."
 msgid ""
 "The members of the news admin group can approve news for the @FORGENAME@ "
 "main page. This group's ID must not be 1. This should be changed only if you "
@@ -460,12 +464,13 @@ msgstr "Anna @FORGENAME@n postituslistoja isännöivän palvelimen verkkonimi."
 #: ../dsf-helper/shellhost-variables.templates:2001
 #, fuzzy
 #| msgid ""
-#| "Please enter the host name of the server that will host the @FORGENAME@ shell "
-#| "accounts."
+#| "Please enter the host name of the server that will host the @FORGENAME@ "
+#| "shell accounts."
 msgid ""
 "Please enter the host name of the server that will host the @FORGENAME@ "
 "shell accounts."
-msgstr "Anna @FORGENAME@n komentorivitunnuksia isännöivän palvelimen verkkonimi."
+msgstr ""
+"Anna @FORGENAME@n komentorivitunnuksia isännöivän palvelimen verkkonimi."
 
 #. Type: string
 #. Description
@@ -478,8 +483,8 @@ msgstr "Käyttäjäpostien edelleenohjaajapalvelin:"
 #: ../dsf-helper/users-variables.templates:2001
 #, fuzzy
 #| msgid ""
-#| "Please enter the host name of the server that will host the @FORGENAME@ user "
-#| "mail redirector."
+#| "Please enter the host name of the server that will host the @FORGENAME@ "
+#| "user mail redirector."
 msgid ""
 "Please enter the host name of the server that will host the @FORGENAME@ user "
 "mail redirector."
