--- a/src/debian/dsf-po/pt.po
+++ b/src/debian/dsf-po/pt.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@ 4.6.99+svn6387-1\n"
-"Report-Msgid-Bugs-To: @PACKAGENAME@@packages.debian.org\n"
+"Report-Msgid-Bugs-To: gforge@packages.debian.org\n"
 "POT-Creation-Date: 2009-06-12 23:23+0200\n"
 "PO-Revision-Date: 2008-04-12 21:30+0100\n"
 "Last-Translator: Ricardo Silva <ardoric@gmail.com>\n"
@@ -27,8 +27,8 @@ msgstr "Servidor de shells:"
 #: ../dsf-in/db-postgresql.templates.dsfh-in:3001
 #, fuzzy
 #| msgid ""
-#| "Please enter the hostname of the server that will host the @FORGENAME@ shell "
-#| "accounts."
+#| "Please enter the hostname of the server that will host the @FORGENAME@ "
+#| "shell accounts."
 msgid ""
 "Please enter the hostname of the server that will host the @FORGENAME@ shell "
 "accounts."
@@ -54,7 +54,8 @@ msgid ""
 "Please enter the hostname of the server that will host the @FORGENAME@ "
 "packages."
 msgstr ""
-"Por favor introduza o nome do servidor que irá guardar os pacotes @FORGENAME@."
+"Por favor introduza o nome do servidor que irá guardar os pacotes "
+"@FORGENAME@."
 
 #. Type: string
 #. Description
@@ -83,14 +84,14 @@ msgstr "Login do administrador do @FORGENAME@:"
 #: ../dsf-in/db-postgresql.templates.dsfh-in:10001
 #, fuzzy
 #| msgid ""
-#| "The @FORGENAME@ administrator account will have full privileges on the system. "
-#| "It will be used to approve the creation of new projects."
+#| "The @FORGENAME@ administrator account will have full privileges on the "
+#| "system. It will be used to approve the creation of new projects."
 msgid ""
 "The @FORGENAME@ administrator account will have full privileges on the "
 "system. It will be used to approve the creation of new projects."
 msgstr ""
-"A conta de administrador do @FORGENAME@ terá privilégios totais sobre o sistema. "
-"Será usada para aprovar a criação de novos projectos."
+"A conta de administrador do @FORGENAME@ terá privilégios totais sobre o "
+"sistema. Será usada para aprovar a criação de novos projectos."
 
 #. Type: string
 #. Description
@@ -166,9 +167,9 @@ msgstr "Lista inicial de competências:"
 #: ../dsf-in/db-postgresql.templates.dsfh-in:12001
 #, fuzzy
 #| msgid ""
-#| "@FORGENAME@ allows users to define a list of their skills, to be chosen from "
-#| "those present in the database. This list is the initial list of skills "
-#| "that will enter the database."
+#| "@FORGENAME@ allows users to define a list of their skills, to be chosen "
+#| "from those present in the database. This list is the initial list of "
+#| "skills that will enter the database."
 msgid ""
 "@FORGENAME@ allows users to define a list of their skills, to be chosen from "
 "those present in the database. This list is the initial list of skills that "
@@ -240,8 +241,8 @@ msgstr "Deseja que o mail para ${noreply} seja apagado?"
 #: ../dsf-in/mta-postfix.templates.dsfh-in:3001
 #, fuzzy
 #| msgid ""
-#| "@FORGENAME@ sends and receives plenty of e-mail to and from the \"${noreply}\" "
-#| "address."
+#| "@FORGENAME@ sends and receives plenty of e-mail to and from the "
+#| "\"${noreply}\" address."
 msgid ""
 "@FORGENAME@ sends and receives plenty of e-mail to and from the \"${noreply}"
 "\" address."
@@ -279,9 +280,9 @@ msgid ""
 "Please enter the domain that will host the @FORGENAME@ installation. Some "
 "services (scm, lists, etc.) will be given their own subdomain in that domain."
 msgstr ""
-"Por favor introduza o domínio que vai conter a instalação do @FORGENAME@. Alguns "
-"serviços (scm, listas de mail, etc.) terão o seu próprio subdomínio nesse "
-"domínio."
+"Por favor introduza o domínio que vai conter a instalação do @FORGENAME@. "
+"Alguns serviços (scm, listas de mail, etc.) terão o seu próprio subdomínio "
+"nesse domínio."
 
 #. Type: string
 #. Description
@@ -296,14 +297,14 @@ msgstr "Endereço de email do administrador do @FORGENAME@:"
 #: ../dsf-helper/common-variables.templates:3001
 #, fuzzy
 #| msgid ""
-#| "Please enter the e-mail address of the @FORGENAME@ administrator of this site. "
-#| "It will be used when problems occur."
+#| "Please enter the e-mail address of the @FORGENAME@ administrator of this "
+#| "site. It will be used when problems occur."
 msgid ""
 "Please enter the e-mail address of the @FORGENAME@ administrator of this "
 "site. It will be used when problems occur."
 msgstr ""
-"Por favor introduza o endereço de email do administrador @FORGENAME@ neste site. "
-"Será usado quando houverem problemas."
+"Por favor introduza o endereço de email do administrador @FORGENAME@ neste "
+"site. Será usado quando houverem problemas."
 
 #. Type: string
 #. Description
@@ -318,8 +319,8 @@ msgstr "Nome do sistema @FORGENAME@:"
 #: ../dsf-helper/common-variables.templates:4001
 #, fuzzy
 #| msgid ""
-#| "Please enter the name of the @FORGENAME@ system. It is used in various places "
-#| "throughout the system."
+#| "Please enter the name of the @FORGENAME@ system. It is used in various "
+#| "places throughout the system."
 msgid ""
 "Please enter the name of the @FORGENAME@ system. It is used in various "
 "places throughout the system."
@@ -358,7 +359,8 @@ msgstr "Nome da sua base de dados:"
 #: ../dsf-helper/dbhost-variables.templates:3001
 #, fuzzy
 #| msgid ""
-#| "Please enter the name of the database that will host the @FORGENAME@ database."
+#| "Please enter the name of the database that will host the @FORGENAME@ "
+#| "database."
 msgid ""
 "Please enter the name of the database that will host the @FORGENAME@ "
 "database."
@@ -415,7 +417,8 @@ msgid ""
 "Please enter the host name of the server that will host the @FORGENAME@ "
 "packages."
 msgstr ""
-"Por favor introduza o nome do servidor que irá guardar os pacotes do @FORGENAME@."
+"Por favor introduza o nome do servidor que irá guardar os pacotes do "
+"@FORGENAME@."
 
 #. Type: string
 #. Description
@@ -428,17 +431,17 @@ msgstr "Identificador do grupo de administradores de notícias:"
 #: ../dsf-helper/groupid-variables.templates:2001
 #, fuzzy
 #| msgid ""
-#| "The members of the news admin group can approve news for the @FORGENAME@ main "
-#| "page. This group's ID must not be 1. This should be changed only if you "
-#| "upgrade from a previous version and want to keep the data."
+#| "The members of the news admin group can approve news for the @FORGENAME@ "
+#| "main page. This group's ID must not be 1. This should be changed only if "
+#| "you upgrade from a previous version and want to keep the data."
 msgid ""
 "The members of the news admin group can approve news for the @FORGENAME@ "
 "main page. This group's ID must not be 1. This should be changed only if you "
 "upgrade from a previous version and want to keep the data."
 msgstr ""
 "Os membros do grupo de administradores de notícias podem aprovar notícias "
-"afixadas na página principal do @FORGENAME@. Este identificador de grupo não pode "
-"ser 1. Isto deve ser mudado apenas se actualizar a partir de uma versão "
+"afixadas na página principal do @FORGENAME@. Este identificador de grupo não "
+"pode ser 1. Isto deve ser mudado apenas se actualizar a partir de uma versão "
 "antiga e quiser manter os seus dados."
 
 #. Type: string
@@ -478,8 +481,8 @@ msgstr ""
 #: ../dsf-helper/shellhost-variables.templates:2001
 #, fuzzy
 #| msgid ""
-#| "Please enter the host name of the server that will host the @FORGENAME@ shell "
-#| "accounts."
+#| "Please enter the host name of the server that will host the @FORGENAME@ "
+#| "shell accounts."
 msgid ""
 "Please enter the host name of the server that will host the @FORGENAME@ "
 "shell accounts."
@@ -498,8 +501,8 @@ msgstr "Servidor de redirecção de mail dos utilizadores:"
 #: ../dsf-helper/users-variables.templates:2001
 #, fuzzy
 #| msgid ""
-#| "Please enter the host name of the server that will host the @FORGENAME@ user "
-#| "mail redirector."
+#| "Please enter the host name of the server that will host the @FORGENAME@ "
+#| "user mail redirector."
 msgid ""
 "Please enter the host name of the server that will host the @FORGENAME@ user "
 "mail redirector."
